# BSP-S5

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
frontend/: app.py
voice_assistant/: asr_client.py  llm_client.py  main.py  tts_client.py
