[project]
name = "voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.121.3",
    "fastrtc[vad]>=0.0.34",
    "google-genai>=1.52.0",
    "gradio==5.50.0",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
    "tts>=0.22.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
